# Hackathon-II

./: AUTH_FORMS_ENHANCEMENT.md  BACKEND_REVIEW.md  DEPLOYMENT_GUIDE.md  README.md  deploy-backend.md  render.yaml  tmpclaude-ae27-cwd
.claude/agents/: AGENT.md  Software-engineer.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
Phase-1/tests/: __init__.py
Phase-2/: .gitignore  DATABASE_SETUP_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  FRONTEND_AUTH_SUMMARY.md  LOADING_IMPLEMENTATION.md  QUICK_DEPLOY.md  QUICK_START_DEPLOY.md  README.md  deploy-frontend.md  test_bcrypt_fix.py
Phase-2/backend/: .gitignore  DATABASE_QUICK_REFERENCE.md  README.md  database_maintenance.sql  pyproject.toml  render.yaml  requirements.txt
Phase-2/frontend/: AUTH_FIXES.md  QUICK_START.md  README.md  VERIFICATION_CHECKLIST.md  middleware.ts  next.config.ts  package-lock.json  package.json  render.yaml  tailwind.config.ts  test-auth.js  tmpclaude-3d6f-cwd  tsconfig.tsbuildinfo
Phase-2/specs/: readme.md
Phase-3/: DEPLOYMENT.md  README.md
Phase-3/backend/: .gitignore  render.yaml  requirements.txt
Phase-3/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  (+1 more)
backend/: DATABASE_QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  deps.py  main.py  models.py  schemas.py  security.py
backend/app/routes/: __init__.py  auth.py  tasks.py
frontend/: middleware.ts  next.config.ts  package.json  tailwind.config.ts  vercel.json
(+179 files in other folders)
